[gd_scene load_steps=7 format=2]

[ext_resource path="res://BebasNeue-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://HUD.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 55
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 45
font_data = ExtResource( 1 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="ScoreLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -13.0
margin_right = 13.0
margin_bottom = 159.0
custom_fonts/font = SubResource( 1 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageLabel" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -39.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 2 )
text = "BlueShift"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InstructionsLabel" type="Label" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 40.0
margin_top = -75.0
margin_right = -40.0
custom_fonts/font = SubResource( 3 )
text = "Instructions: Collect the blue coin while avoiding the green block. WASD to move."
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton" type="Button" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 100.0
margin_top = 65.0
margin_right = -100.0
margin_bottom = 126.0
custom_fonts/font = SubResource( 4 )
text = "play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
[connection signal="pressed" from="PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
